partial/force-app/main/default/objects/Landlord_Ownership__c/Landlord_Ownership__c.object-meta.xml
<CustomObject>
    <label>Landlord Ownership</label>
    <nameField>
        <label>Landlord Ownership Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Landlord Ownerships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>