partial/force-app/main/default/objects/Landlord_Ownership__c/fields/Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Id__c</fullName>
    <label>Account Id</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Landlord Ownerships</relationshipLabel>
    <relationshipName>Landlord_Ownerships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>