partial/force-app/main/default/objects/Landlord_Ownership__c/fields/Landlord__c.field-meta.xml
<CustomField>
    <fullName>Landlord__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Landlord</label>
    <referenceTo>Landlord__c</referenceTo>
    <relationshipLabel>Landlord Ownerships</relationshipLabel>
    <relationshipName>Landlord_Ownerships</relationshipName>
    <type>Lookup</type>
</CustomField>