partial/force-app/main/default/objects/Landlord_Ownership__c/fields/Landlord_Reapit_Id__c.field-meta.xml
<CustomField>
    <fullName>Landlord_Reapit_Id__c</fullName>
    <externalId>true</externalId>
    <label>Landlord Reapit Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>