partial/force-app/main/default/objects/Landlord_Ownership__c/fields/Ownership_Name__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Name__c</fullName>
    <label>Ownership Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>