partial/force-app/main/default/objects/Landlord_Ownership__c/fields/User_Key_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Key_Id__c</fullName>
    <externalId>true</externalId>
    <label>User Key Id</label>
    <length>70</length>
    <type>Text</type>
</CustomField>